Added path for service worker for GH Pages

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name": "PianoBingo",
     "short_name": "PB",
     "description": "App to automate generation of piano bingo pdf sheetmusic",
-    "start_url": "/PianoBingo/",
+    "start_url": "/",
     "display": "standalone",
     "background_color": "#ffffff",
     "theme_color": "#000000",
